syntax = "proto3";

package yandex.cloud.mdb.greenplum.v1;

import "yandex/cloud/validation.proto";

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/mdb/greenplum/v1;greenplum";
option java_package = "yandex.cloud.api.mdb.greenplum.v1";

message HBARule {
  enum ConnectionType {
    CONNECTION_TYPE_UNSPECIFIED = 0;

    // Matches connection attempts made using TCP/IP.
    HOST = 1;

    // Matches connection attempts made using TCP/IP, but only when the connection is made with SSL encryption.
    HOSTSSL = 2;

    // Matches connection attempts made over TCP/IP that do not use SSL.
    HOSTNOSSL = 3;
  }

  enum AuthMethod {
    AUTH_METHOD_UNSPECIFIED = 0;

    // Perform SCRAM-SHA-256 or MD5 authentication to verify the user's password.
    MD5 = 1;

    // Perform LDAP authentication, if MDB_GREENPLUM_LDAP flag is set
    LDAP = 2;

    // Disable authentication
    REJECT = 3;
  }

  // Priority of the Greenplum cluster rule.
  int64 priority = 1 [(value) = "0-1000"];

  ConnectionType connection_type = 2;

  // Specifies which database names this record matches.
  string database = 3 [(required) = true];

  // Specifies which database role names this user matches.
  string user = 4 [(required) = true];

  // Specifies the client machine addresses that this record matches.
  string address = 5 [(required) = true];

  // Specifies the authentication method to use when a connection matches this record.
  // https://gpdb.docs.pivotal.io/6-6/security-guide/topics/Authenticate.html
  AuthMethod auth_method = 6;
}
